<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/iv_portrait_add"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.4" />

    <TextView
        android:id="@+id/lbl_nickname_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/tv_nickname"
        />

    <TextView
        android:id="@+id/lbl_status_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/tv_status" />

    <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:text="@string/add_contact" />

</LinearLayout>