<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_portrait"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="onClickPhoto"
        android:text="@string/tale_photo" />

    <Button
        android:id="@+id/btn_add_photo_form_file"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/ic_launcher"
        android:text="@string/from_file" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit nickname" />

    <EditText
        android:id="@+id/et_edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit status" />

    <EditText
        android:id="@+id/et_edit_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />
    </LinearLayout>
</LinearLayout>